23-07-05 스프링 공지사항 등록, 수정, 삭제

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Hello Spring, This is Main Page.</h1>
 <a href="test.html">바로가기</a>
+<a href="/notice/noticeList">공지사항</a>
 </body>
 </html>
