--- a/src/main/resources/templates/user/userRegForm.html
+++ b/src/main/resources/templates/user/userRegForm.html
@@ -185,24 +185,24 @@
             }
 
             // Ajax 호출해서 회원가입하기
-            $.ajax({
-                    url: "/user/insertUserInfo",
-                    type: "post", // 전송방식은 Post
-                    dataType: "JSON", // 전송 결과는 JSON으로 받기
-                    data: $("#f").serialize(), // form 태그 내 input 등 객체를 자동으로 전송할 형태로 변경하기
-                    success: function (json) { // /notice/noticeUpdate 호출이 성공했다면..
-
-                        if (json.result === 1) { // 회원가입 성공
-                            alert(json.msg); // 메시지 띄우기
-                            location.href = "/user/login"; // 로그인 페이지 이동
-
-                        } else { // 회원가입 실패
-                            alert(json.msg); // 메시지 띄우기
-                        }
-
-                    }
-                }
-            )
+            // $.ajax({
+            //         url: "/user/insertUserInfo",
+            //         type: "post", // 전송방식은 Post
+            //         dataType: "JSON", // 전송 결과는 JSON으로 받기
+            //         data: $("#f").serialize(), // form 태그 내 input 등 객체를 자동으로 전송할 형태로 변경하기
+            //         success: function (json) { // /notice/noticeUpdate 호출이 성공했다면..
+            //
+            //             if (json.result === 1) { // 회원가입 성공
+            //                 alert(json.msg); // 메시지 띄우기
+            //                 location.href = "/user/login"; // 로그인 페이지 이동
+            //
+            //             } else { // 회원가입 실패
+            //                 alert(json.msg); // 메시지 띄우기
+            //             }
+            //
+            //         }
+            //     }
+            // )
         }
 
     </script>
